--- a/site/content/posts/recipes/6-versatile-burger-recipes-fit-for-every-type-of-eater/index.mdx
+++ b/site/content/posts/recipes/6-versatile-burger-recipes-fit-for-every-type-of-eater/index.mdx
@@ -12,7 +12,7 @@ featured: true
 
 Lorem markdownum obvius in seque opus, est bicorni forte; laeva. **Iurant**
 patria beatam semel communis et atra qua fugit, solet invicti cui inter patulas
-regibus remolliat volumina sorori? Quidem miscentem regna interea natura in
+regibus remolliat volusadina sorori? Quidem miscentem regna interea natura in
 adligat, aenum onere placere lympha. Sunt tantum intentare exhortatus avidas
 Scythides lacrimis imitatus prohibent terraeque donec ulterius thalamosque fero
 comitantibus. Tela cervicem insiluit locis, falsa et umida ulterius digitos
