--- a/site/content/posts/kiengla/cac-loai-philodendrons-pho-bien/index.mdx
+++ b/site/content/posts/kiengla/cac-loai-philodendrons-pho-bien/index.mdx
@@ -4,7 +4,7 @@ category: Kiểng Lá
 author: Steve Grant
 tags: ['#agency', '#business', '#technology']
 date: 2024-07-24
-thumbnail: image.jpg
+thumbnail: 4.webp
 ---
 
 ![Một số dòng philodendron có lá xẻ](./1.webp)
