--- a/site/content/posts/guppy/dumbo-koi-short/index.mdx
+++ b/site/content/posts/guppy/dumbo-koi-short/index.mdx
@@ -1,8 +1,7 @@
 ---
 title: Dumbo Koi Short
 category: Guppy
-author: John Doe
-tags: ['#agency', '#business', '#technology']
+tags: ['#guppy']
 date: 2024-08-16
 thumbnail: image.jpg
 ---
