--- a/site/content/posts/guppy/dumbo-santa-short/index.mdx
+++ b/site/content/posts/guppy/dumbo-santa-short/index.mdx
@@ -1,8 +1,7 @@
 ---
 title: Dumbo Santa Short
 category: Guppy
-author: John Doe
-tags: ['#agency', '#business', '#technology']
+tags: ['#guppy']
 date: 2024-08-17
 thumbnail: image.png
 ---
